<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="#CC000000"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:targetApi="28">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="4dp">

        <ImageButton
            android:id="@+id/exo_prev"
            android:contentDescription="@string/exo_prev_desc"
            style="@style/ExoMediaButton.Previous" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_open"
            android:id="@+id/exo_floating_widget">
        </ImageView>

        <ImageButton
            android:id="@+id/exo_rew"
            android:contentDescription="@string/exo_rew_desc"
            style="@style/ExoMediaButton.Rewind" />


        <ImageButton
            android:id="@+id/exo_repeat_toggle"
            style="@style/ExoMediaButton"
            android:contentDescription="@string/exo_repeat_toggle_desc" />


        <ImageButton
            android:id="@+id/exo_play"
            android:contentDescription="@string/exo_play_desc"
            style="@style/ExoMediaButton.Play" />

        <ImageButton
            android:id="@+id/exo_pause"
            android:contentDescription="@string/exo_pause_desc"
            style="@style/ExoMediaButton.Pause" />

        <ImageButton
            android:id="@+id/exo_ffwd"
            android:contentDescription="@string/exo_ffwd_desc"
            style="@style/ExoMediaButton.FastForward" />

        <ImageButton
            android:id="@+id/exo_next"
            android:contentDescription="@string/exo_next_desc"
            style="@style/ExoMediaButton.Next" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="#FFBEBEBE"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@+id/exo_progress"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="#FFBEBEBE"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
